--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4581,3 +4581,122 @@
 	.major h2 {
 		font-size: 4rem;
 	}
+
+	#map {
+		height: 500px;
+		width: 500px;
+		align-self: flex-end;
+		justify-self: ;
+	}
+
+	#mapContainerContainer {
+		width: 100%;
+		background-color: rgba(229, 229, 229, 0.5);
+	}
+
+	#mapContainer {
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap-reverse;
+		background-color: rgba(229, 229, 229, 0);
+		max-width: 1000px;
+		margin: auto;
+	}
+
+	#mapContainer li {
+		text-align: left;
+	}
+
+	#areasCovered {
+		padding: 40px;
+	}
+
+	#areasCovered a {
+		background-color: white;
+	}
+
+	@media screen and (max-width:777px) {
+
+		#mapContainer {
+			display: flex;
+			justify-content: flex-start;
+			flex-wrap: wrap-reverse;
+			background-color: rgba(229, 229, 229, 0);
+			max-width: 1000px;
+			margin: auto;
+		}
+
+		#areasCovered {
+			/* padding: 0; */
+			justify-self: flex-start !important;
+			align-self: flex-start !important;
+			text-align: left !important;
+
+		}
+
+		#areasCovered ul {
+			list-style-type:none;
+			padding:0;
+			margin: 0;
+			clear: both;
+		}
+		
+		#areasCovered h3 {
+			padding-left: 3%;
+		}
+
+		#areasCovered ul li {
+			float:left;
+			
+		}
+
+		#areasCovered ul {
+			overflow: hidden;
+			padding: 0.4rem;
+			background-color: rgba(192, 192, 192, 0.1);
+		}
+
+		.clearfix {
+			clear:both;
+	  	}
+
+		#areasCovered a {
+			clear: both;
+			/* display: block; */
+			margin: 1rem 30%;
+		}
+
+		#map {
+			margin: auto;
+		}
+	}
+
+/*		 Slide in style 		*/
+
+.hiddenLeft {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.hiddenRight {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(100%);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+.sliderText {
+	font-size: small;
+}
+
+.beforeAfter h3 {
+	padding-top: 1rem;
+}
