--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3409,7 +3409,7 @@
 
 		
 			#banner {
-				padding: 10em 0 18em 0;
+				padding: 10em 0 13em 0;
 			}
 
 			#narrowNav {
@@ -3447,7 +3447,7 @@
 				background-blend-mode: multiply;
 				background-color: rgba(0,0,0,.7);
 				background-blend-mode: multiply;
-				padding: 12em 0 20em 0;
+				padding: 12em 0 13em 0;
 				text-align: center;
 			}
 
@@ -4796,11 +4796,29 @@
 
 #bannerTestimonials {
 	display: flex;
+	flex-wrap: wrap;
 	max-width: 800px;
 	justify-content: center;
 	margin: 0 auto;
+	
+}
+
+#bannerTestimonials section {
+	padding: 0.3em;
+	flex-basis: 260px;
 }
 
 #bannerTestimonials p {
 	font-size: small;
+	font-style: italic;
+	color: rgba(250, 250, 250, 0.8);
 }
+
+.upperTestimonial:nth-child(2) {
+	transition-delay: 200ms;
+}
+
+.upperTestimonial:nth-child(3) {
+	transition-delay: 400ms;
+}
+
