removed the header below 840px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3549,9 +3549,9 @@
 			#wideNav {
 				display: none;
 			}
-			/* #header {
+			#header {
 				display: none;
-			} */
+			}
 
 			#header #narrowNav {
 				display: inline;
